# FastGaussianPuff

./: .gitignore  CGaussianPuff.cpp  CMakeLists.txt  GaussianPuff.py  README.md  environment.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  build_intel.yml  check-link-rot.yaml  conda.yaml
demo/: demo.py  sensor_demo.py
demo/parser/data/: ADED_sources.csv
recipe/: build_env.yaml  meta.yaml
src/: CGaussianPuff.cpp  GaussianPlume.py  GaussianPuff.py  __init__.py  interface_helpers.py  parser.py
tests/: import_test.py  legacy_tests.py  test_dst.py  test_import.py  test_parser.py  test_plume.py  test_regression.py  tests.py
tests/parser/in/: dlq.in  multi.in
tests/parser_data/: ADED_sensors.csv
tests/parser_inputs/: dlq.in  exp_dlq.csv  exp_multi.csv  multi.in
tests/test_data/: readme.txt
