[build-system]
requires = [
    "scikit-build-core>=0.10",
    "setuptools>=61",
    "pybind11>=2.10",
    "numpy>=1.23"
]
build-backend = "scikit_build_core.build"

[project]
name = "FastGaussianPuff"
version = "0.1.0"
description = "FastGaussianPuff: A high-performance Gaussian puff atmospheric dispersion model."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Ryker Fish", email = "rfish@mines.edu" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.23",
]
[project.urls]
Homepage = "https://github.com/Hammerling-Research-Group/FastGaussianPuff"
Repository = "https://github.com/Hammerling-Research-Group/FastGaussianPuff"

[tool.scikit-build]
wheel.packages = ["FastGaussianPuff"]

[tool.scikit-build.cmake]
source-dir = "."
define = { "CMAKE_CXX_STANDARD" = "17" }
version = ">=3.19"

